# vexcl-talks

./: .gitignore  CMakeLists.txt  README.md  UseLATEX.cmake  abstract.md  abstract.txt  abstract_demidov.doc  backends.py  beamercolorthemechameleon.sty  beamerinnerthemefancy.sty  beamerouterthemedecolines.sty  beamerthemeTorino.sty  chameleon.m  chameleon.py  cpu_vs_gpu.py  experiment.m  forkme.tex  lorenz.eps  lorenz.m  lorenz.py  make_plots.py  mba.eps  mcpi.py  mcpp_vexcl_2012.tex  naive_perf.m  opencl-kazan-2015.tex  part1_opencl.tex  perfcmp-1.eps  perfcmp-2.eps  perfcmp-3.eps  perfcmp-4.eps  perfcmp-5.eps  perfcmp.eps  perfgen.eps  perfgen.m  perfmtx.m  perfnaive.eps  perfnaive.m  perfplot.eps  perfplot.py  (+18 more)
code/: CMakeLists.txt  Makefile  genlam.cpp  gensrc.cpp  getdata.m  hello-compute.cpp  hello-opencl.cpp  hello-vexcl.cpp  interp.cpp  lazy_v1.cpp  lazy_v2.cpp  lorenz-naive.cpp  lorenz.cpp  lorenz.ipynb  lorenz.py  pi-kernel.cpp  pi.cpp  proto_custom_context.cpp  proto_hello.cpp  pylorenz.cpp  show_mba.m
code/lorenz/: .gitignore  Makefile  cublas.cu  experiment.m  perfgen.m  perfnaive.m  run.sh  thrust.cu  vexcl_generated.cpp  vexcl_naive.cpp
code/lorenz_perf/: CMakeLists.txt  log.hpp  lorenz_thrust.cu  lorenz_vexcl_naive.cpp  lorenz_vexcl_symb.cpp  rename.sh  run_tests.sh
